--- a/index/index.html
+++ b/index/index.html
@@ -123,10 +123,11 @@
           <a target="_blank" href="https://www.instagram.com"><img src="../imagenes/instagram.png" alt="Instagram"></a>
           <a target="_blank" href="https://www.linkedin.com"><img src="../imagenes/linkedin.png" alt="LinkedIn"></a>
         </div>
-        <p>&copy; 2023 Organize my mind</p>
+        <p>&copy; 2023 Organize my minde</p>
       </div>
     </div>
   </footer>
+
 
   <script src="codigo.js"></script>
 </body>
