--- a/index/index.html
+++ b/index/index.html
@@ -123,7 +123,7 @@
           <a target="_blank" href="https://www.instagram.com"><img src="../imagenes/instagram.png" alt="Instagram"></a>
           <a target="_blank" href="https://www.linkedin.com"><img src="../imagenes/linkedin.png" alt="LinkedIn"></a>
         </div>
-        <p>&copy; 2023 Organize my minde</p>
+        <p>&copy; 2023 Organize my mind</p>
       </div>
     </div>
   </footer>
