Sección del que somos basica

--- a/index/index.html
+++ b/index/index.html
@@ -78,15 +78,15 @@
       <h2>Saber más</h2>
       <div class="circle">
         <h4>Beneficios para la vida</h4>
-        <a href="#"><img src="../imagenes/flecha.png" alt="Flecha"></a>
+        <a target="_blank" href="https://www.grupocibernos.com/blog/ventajas-de-usar-aplicaciones-para-gestion-de-tareas"><img src="../imagenes/flecha.png" alt="Flecha"></a>
       </div>
       <div class="circle">
         <h4>Optimiza tu tiempo</h4>
-        <a href="#"><img src="../imagenes/flecha.png" alt="Flecha"></a>
+        <a target="_blank" href="https://quakki.com/optimiza-el-tiempo-en-tu-empresa-utilizando-un-gestor-de-proyectos-y-tareas/"><img src="../imagenes/flecha.png" alt="Flecha"></a>
       </div>
       <div class="circle">
         <h4>Más organización</h4>
-        <a href="#"><img src="../imagenes/flecha.png" alt="Flecha"></a>
+        <a target="_blank" href="https://www.xataka.com/aplicaciones/llevo-siete-anos-organizando-toda-mi-vida-gestor-tareas-se-recomiendo-a-todo-mundo-1"><img src="../imagenes/flecha.png" alt="Flecha"></a>
       </div>
     </div>
   </section>
