--- a/quienes-somos/queSomos.html
+++ b/quienes-somos/queSomos.html
@@ -1,69 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <link rel="stylesheet" href="queSomos.css">
   <link rel="icon" type="image/png" href="../imagenes/logo.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quienes Somos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quienes Somos</title>
 </head>
+
 <body>
-    <header>
-        <div class="logo">
-          <a href="../index/index.html">
-            <img src="../imagenes/logo.png" alt="Logo de Organize My Mind" width="100">
-          </a>
-        </div>
-        <div class="navbar-toggle" onclick="toggleNavbar()">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-        <nav class="navigation" id="navbarLinks">
-          <a href="../que-es/queEs.html">¿Qué es?</a>
+  <header>
+    <div class="logo">
+      <a href="../index/index.html">
+        <img src="../imagenes/logo.png" alt="Logo de Organize My Mind" width="100">
+      </a>
+    </div>
+    <div class="navbar-toggle" onclick="toggleNavbar()">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <nav class="navigation" id="navbarLinks">
+      <a href="../que-es/queEs.html">¿Qué es?</a>
       <a href="../quienes-somos/queSomos.html">¿Quiénes somos?</a>
       <a href="../login/login.html">Iniciar sesión</a>
       <a href="../signup/signup.html">Registrarse</a>
-        </nav>
-      </header>
+    </nav>
+  </header>
 
 
-      <footer>
-        <div class="footer-container">
-          <div class="footer-column">
-            <a href="../index/index.html">
-              <img src="../imagenes/logo.png" alt="Logo de la empresa">
-            </a>
-          </div>
-          <div class="footer-column">
-            <h3>Servicios de la página web</h3>
-            <ul>
-              <li><a href="../que-es/queEs.html">¿Qué es?</a></li>
-              <li><a href="../quienes-somos/queSomos.html">¿Qué somos?</a></li>
-              <li><a href="../login/login.html">Iniciar sesión</a></li>
-              <li><a href="../signup/signup.html">Registrarse</a></li>
-            </ul>
-          </div>
-          <div class="footer-column">
-            <h3>Pestañas Legales</h3>
-            <ul>
-              <li><a href="../pestañas-legales/terminos.html">Términos y condiciones</a></li>
+  <section>
+    <h2>Historia y Origen</h2>
+    <p>Nuestra historia comenzó con la simple idea de mejorar la vida de las personas a través de una gestión eficiente
+      del tiempo y de sus tareas diarias. En un mundo cada vez más acelerado y lleno de responsabilidades, nos dimos
+      cuenta de la necesidad de proporcionar herramientas que simplifiquen la organización personal y profesional.</p>
+  </section>
+
+  <!-- Carrusel de Imágenes -->
+  <section>
+    <h2>Carrusel de Imágenes</h2>
+    <div class="carrusel">
+      <!-- Agrega aquí las imágenes en el carrusel -->
+      <img src="../imagenes/URL_imagen1.avif" alt="Imagen 1">
+      <img src="../imagenes/URL_imagen2.png" alt="Imagen 2">
+      <img src="../imagenes/URL_imagen3.jpg" alt="Imagen 3">
+      <img src="../imagenes/URL_imagen4.jpg" alt="Imagen 4">
+    </div>
+  </section>
+
+  <!-- Misión y Visión -->
+  <section>
+    <h2>Misión</h2>
+    <p>Nuestra misión es proporcionar herramientas intuitivas y accesibles que permitan a las personas simplificar su
+      vida diaria, mejorar su productividad y encontrar un equilibrio entre su trabajo y su bienestar personal.</p>
+
+    <h2>Visión</h2>
+    <p>Queremos ser líderes en soluciones de gestión personal, ayudando a millones de personas en todo el mundo a
+      alcanzar sus metas y aspiraciones de manera más eficiente y efectiva.</p>
+  </section>
+
+  <!-- Valores y Principios -->
+  <section>
+    <h2>Valores y Principios</h2>
+    <ul>
+      <li><strong>Excelencia:</strong> Buscamos la excelencia en todo lo que hacemos, desde el diseño de nuestros
+        productos hasta el servicio al cliente.</li>
+      <li><strong>Integridad:</strong> Actuamos con honestidad y transparencia en todas nuestras interacciones.</li>
+      <li><strong>Innovación:</strong> Estamos comprometidos con la innovación constante y la mejora continua de
+        nuestras soluciones.</li>
+      <li><strong>Empatía:</strong> Entendemos y nos preocupamos por las necesidades y desafíos de nuestros usuarios.
+      </li>
+    </ul>
+  </section>
+
+  <!-- Equipo -->
+  <section>
+    <h2>Equipo</h2>
+    <ul>
+      <li><strong>CEO:</strong> Jeisson Sanchez (Neiva, Colombia)</li>
+      <li><strong>CTO:</strong> Laura García</li>
+      <li><strong>Directora de Marketing:</strong> Carlos Pérez</li>
+      <li><strong>Gerente de Producto:</strong> María Rodríguez</li>
+      <li><strong>Especialista en Experiencia del Usuario:</strong> Sofia Martínez</li>
+      <li><strong>Desarrollador Senior:</strong> Andrés Rios</li>
+    </ul>
+  </section>
+
+  <!-- Imagen Representativa -->
+  <section>
+    <h2>Imagen Representativa</h2>
+    <img src="../imagenes/URL_imagen_representativa.jpg" alt="Imagen Representativa">
+  </section>
+
+  <!-- Contacto -->
+  <section>
+    <h2>Contacto</h2>
+    <ul>
+      <li><strong>Teléfono:</strong> +57 3123245124</li>
+      <li><strong>Correo Electrónico:</strong> organizemymind@gmail.com</li>
+      <li><strong>Número Telefónico:</strong> 688437346</li>
+    </ul>
+  </section>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-column">
+        <a href="../index/index.html">
+          <img src="../imagenes/logo.png" alt="Logo de la empresa">
+        </a>
+      </div>
+      <div class="footer-column">
+        <h3>Servicios de la página web</h3>
+        <ul>
+          <li><a href="../que-es/queEs.html">¿Qué es?</a></li>
+          <li><a href="../quienes-somos/queSomos.html">¿Qué somos?</a></li>
+          <li><a href="../login/login.html">Iniciar sesión</a></li>
+          <li><a href="../signup/signup.html">Registrarse</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Pestañas Legales</h3>
+        <ul>
+          <li><a href="../pestañas-legales/terminos.html">Términos y condiciones</a></li>
           <li><a href="../pestañas-legales/politica-de-privacidad.html">Política de privacidad</a></li>
           <li><a href="../pestañas-legales/aviso-legal.html">Aviso legal</a></li>
-            </ul>
-          </div>
-          <div class="footer-column">
-            <h3>Redes Sociales</h3>
-            <div class="social-buttons">
-              <a target="_blank" href="https://www.facebook.com"><img src="../imagenes/facebook.png" alt="Facebook"></a>
-              <a target="_blank" href="https://www.twitter.com"><img src="../imagenes/twitter.png" alt="Twitter"></a>
-              <a target="_blank" href="https://www.instagram.com"><img src="../imagenes/instagram.png" alt="Instagram"></a>
-              <a target="_blank" href="https://www.linkedin.com"><img src="../imagenes/linkedin.png" alt="LinkedIn"></a>
-            </div>
-            <p>&copy; 2023 Organize my mind</p>
-          </div>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Redes Sociales</h3>
+        <div class="social-buttons">
+          <a target="_blank" href="https://www.facebook.com"><img src="../imagenes/facebook.png" alt="Facebook"></a>
+          <a target="_blank" href="https://www.twitter.com"><img src="../imagenes/twitter.png" alt="Twitter"></a>
+          <a target="_blank" href="https://www.instagram.com"><img src="../imagenes/instagram.png" alt="Instagram"></a>
+          <a target="_blank" href="https://www.linkedin.com"><img src="../imagenes/linkedin.png" alt="LinkedIn"></a>
         </div>
-      </footer>
-      <script defer src="queSomos.js"></script>
+        <p>&copy; 2023 Organize my mind</p>
+      </div>
+    </div>
+  </footer>
+  <script defer src="queSomos.js"></script>
 </body>
+
 </html>
