agregado la sección de sign up

--- a/quienes-somos/queSomos.html
+++ b/quienes-somos/queSomos.html
@@ -48,7 +48,8 @@
       <img src="../imagenes/URL_imagen4.jpg" alt="Imagen 4">
     </div>
   </section>
-
+  
+ 
   <!-- Misión y Visión -->
   <section>
     <h2>Misión</h2>
@@ -79,11 +80,11 @@
     <h2>Equipo</h2>
     <ul>
       <li><strong>CEO:</strong> Jeisson Sanchez (Neiva, Colombia)</li>
-      <li><strong>CTO:</strong> Laura García</li>
-      <li><strong>Directora de Marketing:</strong> Carlos Pérez</li>
-      <li><strong>Gerente de Producto:</strong> María Rodríguez</li>
-      <li><strong>Especialista en Experiencia del Usuario:</strong> Sofia Martínez</li>
-      <li><strong>Desarrollador Senior:</strong> Andrés Rios</li>
+      <li><strong>CTO:</strong> Laura García (Bogotá, Colombia)</li>
+      <li><strong>Directora de Marketing:</strong> Carlos Pérez (Medellín, Colombia)</li>
+      <li><strong>Gerente de Producto:</strong> María Rodríguez (Cali, Colombia)</li>
+      <li><strong>Especialista en Experiencia del Usuario:</strong> Sofia Martínez (Cartagena, Colombia)</li>
+      <li><strong>Desarrollador Senior:</strong> Andrés Rios (Barranquilla, Colombia)</li>
     </ul>
   </section>
 
