commit login añadido

--- a/pestañas-legales/aviso-legal.html
+++ b/pestañas-legales/aviso-legal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <link rel="stylesheet" href="aviso-legal.css">
   <link rel="icon" type="image/png" href="../imagenes/logo.png">
@@ -28,7 +28,7 @@
       </header>
 
       <section>
-        <h2>Importante: Aviso Legal</h2>
+        <h1>Importante: Aviso Legal</h2>
         <p>En Organize my mind, la seguridad de nuestros usuarios es una prioridad. Queremos informarte sobre algunas medidas de seguridad importantes que debes conocer al utilizar nuestros servicios.</p>
 
         <h3>1. Protección de Datos Personales</h3>
