--- a/que-es/queEs.html
+++ b/que-es/queEs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <link rel="stylesheet" href="queEs.css">
   <link rel="icon" type="image/png" href="../imagenes/logo.png">
@@ -29,7 +29,7 @@
 
       <section class="section">
         <div class="section-content">
-          <h2>¿Qué es Organize My Mind?</h2>
+          <h2 class="section-content-h2">¿Qué es Organize My Mind?</h2>
           <div class="content-description">
             <p>Organize My Mind es una poderosa herramienta diseñada para ayudarte a mantener un control total sobre tus tareas y proyectos. Te permite organizar tus tareas diarias, establecer metas, crear listas de tareas pendientes y mucho más.</p>
             <img src="../imagenes/quees_section.jpg" alt="Ilustración 1" class="content-image">
@@ -67,7 +67,7 @@
     
       <section class="section section-features">
         <div class="section-content">
-          <h2>Facilidad de uso</h2>
+          <h2 class="section-content-h2">Facilidad de uso</h2>
           <div class="features">
             <div class="feature">
               <img src="../imagenes/feature1.jpg" alt="Característica 1">
