--- a/pestañas-legales/terminos.html
+++ b/pestañas-legales/terminos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <link rel="stylesheet" href="terminos.css">
   <link rel="icon" type="image/png" href="../imagenes/logo.png">
