commit incluyendo el dashboard basico

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Organize My Mind</title>
   <link rel="stylesheet" href="estilo.css">
-  <link rel="icon" type="image/png" href="../imagenes/logo.png">
+  <link rel="icon" type="image/png" href="imagenes/logo.png">
 </head>
 <body>
   
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="../imagenes/logo.png" alt="Logo de Organize My Mind" width="100">
+        <img src="imagenes/logo.png" alt="Logo de Organize My Mind" width="100">
       </a>
     </div>
     <div class="navbar-toggle" onclick="toggleNavbar()">
@@ -21,10 +21,10 @@
       <div class="bar"></div>
     </div>
     <nav class="navigation" id="navbarLinks">
-      <a href="../que-es/queEs.html">¿Qué es?</a>
-      <a href="../quienes-somos/queSomos.html">¿Quiénes somos?</a>
-      <a href="../login/login.html">Iniciar sesión</a>
-      <a href="../signup/signup.html">Registrarse</a>
+      <a href="que-es/queEs.html">¿Qué es?</a>
+      <a href="quienes-somos/queSomos.html">¿Quiénes somos?</a>
+      <a href="login/login.html">Iniciar sesión</a>
+      <a href="signup/signup.html">Registrarse</a>
     </nav>
   </header>
   
@@ -37,7 +37,7 @@
       <p>Descubre los beneficios de utilizar gestores de tareas para mantener tu vida organizada y productiva.</p>
     </div>
     <div class="register-button">
-      <a href="signup.html" class="button">Registrarse</a>
+      <a href="signup/signup.html" class="button">Registrarse</a>
     </div>
   </div>
 
@@ -45,10 +45,10 @@
     <div class="text-content">
       <h2>¿Qué es Organize my mind?</h2>
       <p>Organize my mind es un potente gestor de tareas diseñado para ayudarte a mantener un control total sobre tus tareas y proyectos. Con nuestra aplicación, puedes organizar tus tareas diarias, establecer metas, crear listas de tareas pendientes y mucho más.</p>
-      <button class="read-more-button"><a href="queEs.html">Leer más</a></button>
+      <button class="read-more-button"><a href="que-es/queEs.html">Leer más</a></button>
     </div>
     <div class="image-content">
-      <img src="../imagenes/imagen_texto.avif" alt="Imagen de Organize My Mind">
+      <img src="imagenes/imagen_texto.avif" alt="Imagen de Organize My Mind">
     </div>
   </section>
 
@@ -58,17 +58,17 @@
       <div class="advantage-item">
         <h3>Mejora la productividad</h3>
         <p>Organize my mind te ayuda a priorizar tareas y realizar un seguimiento efectivo de tus actividades, lo que aumenta tu productividad.</p>
-        <a href="#" class="btn btn-secondary">Leer más</a>
+        <a target="_blank" href="https://slack.com/intl/es-es/blog/productivity/gestor-de-tareas-por-que-necesitas-para-tus-proyectos" class="btn btn-secondary">Leer más</a>
       </div>
       <div class="advantage-item">
         <h3>Colaboración en equipo</h3>
         <p>Nuestra plataforma permite la colaboración en equipo, lo que facilita la gestión de proyectos y tareas compartidas.</p>
-        <a href="#" class="btn btn-secondary">Leer más</a>
+        <a target="_blank" href="https://asana.com/es/resources/collaboration-in-the-workplace" class="btn btn-secondary">Leer más</a>
       </div>
       <div class="advantage-item">
-        <h3>Acceso desde cualquier lugar</h3>
+        <h3>Acceso Remoto</h3>
         <p>Organize my mind es accesible desde cualquier dispositivo, lo que te permite mantener tus tareas sincronizadas en todo momento.</p>
-        <a href="#" class="btn btn-secondary">Leer más</a>
+        <a target="_blank" href="https://www.ekon.es/blog/gestor-de-proyectos-maximo-responsable-exito/" class="btn btn-secondary">Leer más</a>
       </div>
     </div>
   </section>
@@ -101,18 +101,18 @@
       <div class="footer-column">
         <h3>Servicios de la página web</h3>
         <ul>
-          <li><a href="../que-es/queEs.html">¿Qué es?</a></li>
-          <li><a href="../quienes-somos/queSomos.html">¿Qué somos?</a></li>
-          <li><a href="../login/login.html">Iniciar sesión</a></li>
-          <li><a href="../signup/signup.html">Registrarse</a></li>
+          <li><a href="que-es/queEs.html">¿Qué es?</a></li>
+          <li><a href="quienes-somos/queSomos.html">¿Qué somos?</a></li>
+          <li><a href="login/login.html">Iniciar sesión</a></li>
+          <li><a href="signup/signup.html">Registrarse</a></li>
         </ul>
       </div>
       <div class="footer-column">
         <h3>Pestañas Legales</h3>
         <ul>
-          <li><a href="../pestañas-legales/terminos.html">Términos y condiciones</a></li>
-          <li><a href="../pestañas-legales/politica-de-privacidad.html">Política de privacidad</a></li>
-          <li><a href="../pestañas-legales/aviso-legal.html">Aviso legal</a></li>
+          <li><a href="pestañas-legales/terminos.html">Términos y condiciones</a></li>
+          <li><a href="pestañas-legales/politica-de-privacidad.html">Política de privacidad</a></li>
+          <li><a href="pestañas-legales/aviso-legal.html">Aviso legal</a></li>
         </ul>
       </div>
       <div class="footer-column">
