--- a/login/login.html
+++ b/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="logo">
-          <a href="../index/index.html"><img src="../imagenes/logo_completo.png" alt="Logo"></a>
+          <a href="../index.html"><img src="../imagenes/logo_completo.png" alt="Logo"></a>
         </div>
         <h1>Iniciar Sesión</h1>
         <form id="loginForm">
@@ -22,7 +22,7 @@
             <label for="password"><strong>Contraseña:</strong></label>
             <input placeholder="Ingresa tu contraseña" type="password" id="password" name="password" required>
           </div>
-          <button type="submit">Iniciar Sesión</button>
+          <button id="dashboardButton" href="../dashboard/dashboard.html" type="submit">Iniciar Sesión</button>
         </form>
         <div class="register-link">
           ¿No tienes una cuenta en Organize My Mind? <a href="../signup/signup.html">Regístrate</a>.
