--- a/quienes-somos/queSomos.html
+++ b/quienes-somos/queSomos.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="../index/index.html">
+      <a href="../index.html">
         <img src="../imagenes/logo.png" alt="Logo de Organize My Mind" width="100">
       </a>
     </div>
@@ -107,7 +107,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-column">
-        <a href="../index/index.html">
+        <a href="../index.html">
           <img src="../imagenes/logo.png" alt="Logo de la empresa">
         </a>
       </div>
