--- a/signup/signup.html
+++ b/signup/signup.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-          <a href="../index/index.html">
+          <a href="../index.html">
             <img src="../imagenes/logo.png" alt="Logo de Organize My Mind" width="100">
           </a>
         </div>
@@ -65,7 +65,7 @@
     <footer>
         <div class="footer-container">
           <div class="footer-column">
-            <a href="../index/index.html">
+            <a href="../index.html">
               <img src="../imagenes/logo.png" alt="Logo de la empresa">
             </a>
           </div>
