--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" type="image/png" href="../imagenes/logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="dashboard.css">
@@ -12,7 +13,7 @@
       <img src="/imagenes/logo.png" alt="Logo">
     </div>
     <div class="navbar-right">
-      <a href="#" id="admin-icon">Admin</a>
+      <a href="#" id="admin-icon"><i class="fa-solid fa-user"></i></a>
       <div id="admin-menu">
         <ul>
           <li><a href="../index.html">Cerrar Sesión</a></li>
@@ -20,7 +21,7 @@
       </div>
     </div>
     <div class="search-bar">
-      <input type="text" id="search-input" placeholder="Buscar notas">
+      <input type="text" id="search-input" placeholder="Buscar notas" oninput="searchNotes()">
     </div>
   </nav>
   
@@ -41,6 +42,7 @@
     </div>
   </div>
 
+  
   <script defer src="dashboard.js"></script>
 </body>
 </html>
